--- a/src/App.css
+++ b/src/App.css
@@ -646,7 +646,7 @@ nav.navbar .navbar-toggle[aria-expanded="true"] .navbar-toggle-icon {
   .skills {
     width: 100%;
     height: 100%;
-    animation: rotate 10s linear infinite; /* Keep rotation on smaller screens */
+    animation: rotate 10s linear infinite; 
   }
 
   .skill {
